deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: komiser
  name: komiser
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: komiser
